--- a/teacher-server/application/css/basicCss.css
+++ b/teacher-server/application/css/basicCss.css
@@ -107,9 +107,18 @@ body {
 
 
 .bcss-input1 {
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 9999px;
+  padding: 7px 15px;
+  margin: 3px;
+  font-size: 1.5em;
+  font-family: Calibri;
+}
+.bcss-textarea1 {
     background-color: white;
     border: 1px solid gray;
-    border-radius: 9999px;
+    border-radius: 10px;
     padding: 7px 15px;
     margin: 3px;
     font-size: 1.5em;
