--- a/teacher-server/application/css/index.css
+++ b/teacher-server/application/css/index.css
@@ -15,7 +15,7 @@ audio::-webkit-media-controls-play-button, audio::-webkit-media-controls-panel {
 }
 
 div.login_center_box {
-    background-color: antiquewhite;
+    background-color: lightseagreen;
     padding: 30px;
     border-radius: 30px;
     display: flex;
@@ -29,74 +29,19 @@ div.login_center_box .title {
 }
 
 
-#application {
-    /* pas display flex */
-}
-#application div.bandeau {
+div.addLesson_center_box {
+    background-color: whiet;
+    padding: 30px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
     box-shadow: 0px 0px 16px -5px black;
+    width: 450px;
 }
-#application div.app {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+div.addLesson_center_box .title {
+    text-align: center;
+    font-family: cursive;
 }
-#application div.app > div {
-    flex: 1;
-}
-
-#application div.app div.left {
-    height: 90vh;
-    overflow: auto;
-    padding: 10px;
-}
-#application div.app div.left div.video{
-    margin: 0px auto;
-    padding: 10px;
-}
-#application div.app div.left div.video video {
-    width: 700px;
-    height: 400px;
-    border-radius: 25px;
-}
-
-
-#application div.app div.right {
-    max-width: fit-content;
-    padding: 10px;
-    border-left: 1px solid black;
-}
-#application div.app div.right div.informations {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#application div.app div.right div#audioList {
-    margin: 3px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
-    height: 90vh;
-    overflow-y: auto;
-    padding: 10px;
-}
-#application div.app div.right div#audioList div.audio {
-    border: 1px solid black;
-    border-radius: 9999px;
-    margin: 3px;
-    padding: 5px 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: darkgray;
-}
-#application div.app div.right div#audioList div.audio.selected {
-    background-color: #41e64c;
-}
-
 
 #loadingbox {
     z-index: 9999;
@@ -175,4 +120,52 @@ div.login_center_box .title {
     animation: recordingDot_white 1s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+}
+
+#application {
+    /* pas display flex */
+}
+
+#application > div.menu > div.box {
+    display: flex;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+#application > div.menu > div.box > div {
+    padding: 30px;
+    margin: 20px;
+    border-radius: 10px;
+    background-color: aliceblue;
+    box-shadow: 0px 0px 16px -5px black;
+    height: fit-content;
+    cursor: pointer;
+    transition: 0.3s all;
+}
+#application > div.menu > div.box > div:hover {
+    transform: translate(0px, -3px);
+    transition: 0.3s all;
+}
+
+#application > div.app > div.lessons > div.lessonList {
+    display: flex;
+    flex-direction: column;
+}
+
+#application > div.app > div.lessons > div.lessonList > div.lesson {
+    background-color: aqua;
+    display: flex;
+    flex-direction: row;
+    margin: 5px 0px;
+    align-items: center;
+}
+#application > div.app > div.lessons > div.lessonList > div.lesson > div.UUID{ width: 200px; min-width: fit-content; }
+#application > div.app > div.lessons > div.lessonList > div.lesson > div.name{ width: 200px; min-width: fit-content; }
+#application > div.app > div.lessons > div.lessonList > div.lesson > div.youtubeLink{ width: 350px; min-width: fit-content; }
+#application > div.app > div.lessons > div.lessonList > div.lesson > div.text{ width: max-content; overflow-y: auto; flex: 1;}
+
+#application > div.app > div.lessons > div.lessonList > div.lesson > div {
+    padding: 3px;
+    max-height: 100px;
 }
