--- a/teacher-server/application/css/basicCss.css
+++ b/teacher-server/application/css/basicCss.css
@@ -2,7 +2,7 @@
     --background-color: white;
 }
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Calibri, Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
 body {
