--- a/teacher-server/application/css/index.css
+++ b/teacher-server/application/css/index.css
@@ -151,19 +151,32 @@ div.addLesson_center_box .title {
 #application > div.app > div.lessons > div.lessonList {
     display: flex;
     flex-direction: column;
+    margin: 10px;
 }
 
 #application > div.app > div.lessons > div.lessonList > div.lesson {
-    background-color: aqua;
+    /* background-color: aqua; Debug */
     display: flex;
     flex-direction: row;
-    margin: 5px 0px;
+    margin: 0px 0px;
+    padding: 5px;
     align-items: center;
+    border-radius: 5px;
+    cursor: pointer;
 }
+#application > div.app > div.lessons > div.lessonList > div.lessonHeader {
+    font-size: 20px;
+    font-weight: bold;
+}
+#application > div.app > div.lessons > div.lessonList > div.lesson:not(.lessonHeader):hover {
+    box-shadow: 0px 2px 10px -5px #000a;
+    z-index: 90;
+}
+
 #application > div.app > div.lessons > div.lessonList > div.lesson > div.UUID{ width: 200px; min-width: fit-content; }
 #application > div.app > div.lessons > div.lessonList > div.lesson > div.name{ width: 200px; min-width: fit-content; }
 #application > div.app > div.lessons > div.lessonList > div.lesson > div.youtubeLink{ width: 350px; min-width: fit-content; }
-#application > div.app > div.lessons > div.lessonList > div.lesson > div.text{ width: max-content; overflow-y: auto; flex: 1;}
+#application > div.app > div.lessons > div.lessonList > div.lesson:not(.lessonHeader) > div.text{ width: max-content; overflow-y: auto; flex: 1; border: 1px solid gray; border-radius: 5px;}
 
 #application > div.app > div.lessons > div.lessonList > div.lesson > div {
     padding: 3px;
