--- a/teacher-server/application/css/index.css
+++ b/teacher-server/application/css/index.css
@@ -195,7 +195,6 @@ div.addLesson_center_box .title {
     background-color: gray;
     height: 800px;
     width: 800px;
-    padding: 5px;
     margin: 10px;
     border-radius: 10px;
 }
@@ -216,13 +215,17 @@ div.addLesson_center_box .title {
     top: 0px;
     left: 0px;
 
-    background-color: orange;
+    background-color: lightgray;
 }
 
 
 #application div.app div.inSession div.flex div.left div.classCanva div.computer:hover {
     box-shadow: 0px 2px 10px 0px #000a;
 }
+#application div.app div.inSession div.flex div.left div.classCanva div.computer.status__none { background-color: lightgray; }
+#application div.app div.inSession div.flex div.left div.classCanva div.computer.status__recording { background-color: orange; }
+#application div.app div.inSession div.flex div.left div.classCanva div.computer.status__connected { background-color: lightgreen; }
+#application div.app div.inSession div.flex div.left div.classCanva div.computer.status__unfocused { background-color: red; }
 
 
 
@@ -261,7 +264,7 @@ div.addLesson_center_box .title {
 
 
 #application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext {
-    position: relative;
+    /* position: relative; */
     border-bottom: 1px dotted black;
 }
   
@@ -294,12 +297,12 @@ div.addLesson_center_box .title {
 
 
 #application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext div.content span.recordBar { }
-#application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext div.content span.recordBar.recording {
+#application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext.status__recording div.content span.recordBar {
     color: orange;
 }
-#application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext div.content span:not(.recording) > span.inRecordMention {
+#application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext:not(.status__recording) div.content span > span.inRecordMention {
     visibility: hidden;
 }
-#application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext div.content span.recording > span.inRecordMention {
+#application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext.status__recording div.content span > span.inRecordMention {
     visibility: inherit;
 }
