--- a/student-client/application/css/index.css
+++ b/student-client/application/css/index.css
@@ -99,9 +99,9 @@ div.login_center_box .title {
 
 
 #loadingbox {
-    z-index: 9999;
+    z-index: 9900;
 }
-#loading div.loading_mid_popup {
+#loadingbox div.loading_mid_popup {
     background-color: white;
 }
 #loadingbox div.code {
@@ -122,6 +122,24 @@ div.login_center_box .title {
     color: white;
     z-index: 10;
 }
+
+
+
+
+
+#infoboxComputerName {
+    z-index: 9905;
+}
+#infoboxComputerName div.infobox_mid_popup {
+
+}
+#infoboxComputerName h2.text {
+    color: white;
+    z-index: 10;
+    font-size: 100px;
+    color: black;
+}
+
 
 .elapsedTime_recordingDotAnimation.active {
     height: 10px;
