Feature: Added send records to server automatically

--- a/teacher-server/application/css/index.css
+++ b/teacher-server/application/css/index.css
@@ -299,6 +299,7 @@ div.addLesson_center_box .title {
 }
 
 #application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext .callTeacher {
+    visibility: hidden;
     position: absolute;
     top: -8px;
     left: -13px;
