Fixes and work on connected users list menu
- Add icon
- Add internal socket emitter for laboFactice instance
- Fix css
- Working on connected users list menu
- Now logging user name on disconnect

--- a/teacher-server/application/css/index.css
+++ b/teacher-server/application/css/index.css
@@ -128,6 +128,7 @@ div.addLesson_center_box .title {
 
 #application > div.menu > div.box {
     display: flex;
+    flex-wrap: wrap;
     background-color: white;
     justify-content: center;
     align-items: center;
@@ -324,4 +325,18 @@ div.addLesson_center_box .title {
 }
 #application div.app div.inSession div.flex div.left div.classCanva div.computer.hovertext.status__recording div.content span > span.inRecordMention {
     visibility: inherit;
+}
+
+
+/***** connectedUsersList *****/
+
+#application div.app div.connectedUsersList table#connectedUsersList_listElement {
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
+    width: fit-content;
+}
+
+#application div.app div.connectedUsersList table#connectedUsersList_listElement thead tr td {
+
 }
